Fix #14 - Set z-index on menu

--- a/sass/partials/_menus.scss
+++ b/sass/partials/_menus.scss
@@ -8,6 +8,8 @@ $menu-height: 3.5rem !default;
 }
 
 .main-navigation {
+	position: relative;
+	z-index: 100;
 
 	.site-title{
 		float: left;
