--- a/style-rtl.css
+++ b/style-rtl.css
@@ -1354,123 +1354,126 @@ a {
   .main-navigation-container:after {
     clear: both; }
 
-.main-navigation .site-title {
-  float: right;
-  font-size: 1.5rem;
-  font-size: 1.5rem;
-  font-weight: bold;
-  color: #000;
-  margin-bottom: 0;
-  line-height: 3.5rem;
-  text-transform: uppercase; }
-  .main-navigation .site-title a {
-    padding: 0 1em;
-    padding: 0 1rem; }
-.main-navigation ul {
-  font-size: 0.8125rem;
-  font-size: 0.8125rem;
+.main-navigation {
   position: relative;
-  display: block;
-  z-index: 1;
-  margin: 0;
-  padding: 0; }
-.main-navigation a, .main-navigation a:link {
-  color: #fff; }
-.main-navigation li {
-  display: block;
-  float: none;
-  margin: 0;
-  padding: 0;
-  list-style: none;
-  text-align: center; }
-  .main-navigation li a {
-    background-color: #000; }
-    .main-navigation li a, .main-navigation li a:link {
-      display: block;
-      font-family: "PT Sans", "Helvetica Neue", "Helvetica", Helvetica, Arial, sans-serif;
-      line-height: 3.5rem;
-      font-weight: normal;
-      color: #a6a6a6;
-      padding: 0 0.6em;
-      padding: 0 0.6rem;
-      position: relative;
-      text-transform: uppercase; }
-    .main-navigation li a:hover {
-      background-color: #333333;
-      text-decoration: none; }
-.main-navigation .menu-item-has-children a {
-  line-height: 3.5rem; }
-@media all and (min-width: 480px) {
-  .main-navigation {
-    clear: both; }
-    .main-navigation li {
-      text-align: right; }
-    .main-navigation ul {
-      padding: 0;
-      margin: 0;
-      list-style: none;
-      display: block; }
-      .main-navigation ul ul {
-        display: none;
-        position: absolute; }
-    .main-navigation a {
-      border-bottom-width: 0; }
-    .main-navigation li {
-      float: right;
-      padding: 0;
-      margin: 0;
-      list-style: none;
-      position: relative; }
-      .main-navigation li.current-menu-item > a, .main-navigation li:hover > a {
-        color: #fff;
-        background-color: #000; }
-        .main-navigation li.current-menu-item > a:after, .main-navigation li:hover > a:after {
-          border-color: #fff; }
-      .main-navigation li.current-menu-item.menu-item-has-children > a:after, .main-navigation li:hover.menu-item-has-children > a:after {
-        border-top-color: #fff; }
-      .main-navigation li.menu-item-has-children a {
-        padding-left: 2em;
-        padding-left: 2rem; }
-      .main-navigation li.menu-item-has-children > a:after {
-        content: "";
+  z-index: 100; }
+  .main-navigation .site-title {
+    float: right;
+    font-size: 1.5rem;
+    font-size: 1.5rem;
+    font-weight: bold;
+    color: #000;
+    margin-bottom: 0;
+    line-height: 3.5rem;
+    text-transform: uppercase; }
+    .main-navigation .site-title a {
+      padding: 0 1em;
+      padding: 0 1rem; }
+  .main-navigation ul {
+    font-size: 0.8125rem;
+    font-size: 0.8125rem;
+    position: relative;
+    display: block;
+    z-index: 1;
+    margin: 0;
+    padding: 0; }
+  .main-navigation a, .main-navigation a:link {
+    color: #fff; }
+  .main-navigation li {
+    display: block;
+    float: none;
+    margin: 0;
+    padding: 0;
+    list-style: none;
+    text-align: center; }
+    .main-navigation li a {
+      background-color: #000; }
+      .main-navigation li a, .main-navigation li a:link {
         display: block;
-        position: absolute;
-        top: 50%;
-        left: 0.6em;
-        left: 0.6rem;
-        margin-top: -3px;
-        border: 5px solid transparent;
-        border-top-color: #a6a6a6;
-        height: 0;
-        width: 0;
-        margin-right: 10px; }
-      .main-navigation li .sub-menu .menu-item-has-children:hover > a:after {
-        border-right-color: #fff; }
-      .main-navigation li .sub-menu .menu-item-has-children > a:after {
-        content: "";
-        display: block;
-        position: absolute;
-        top: 50%;
-        left: 0.6em;
-        left: 0.6rem;
-        margin-top: -6px;
-        border: 5px solid transparent;
-        border-right-color: #a6a6a6;
-        height: 0;
-        width: 0;
-        margin-right: 10px; }
-      .main-navigation li.menu-item-has-children:hover {
+        font-family: "PT Sans", "Helvetica Neue", "Helvetica", Helvetica, Arial, sans-serif;
+        line-height: 3.5rem;
+        font-weight: normal;
+        color: #a6a6a6;
+        padding: 0 0.6em;
+        padding: 0 0.6rem;
+        position: relative;
+        text-transform: uppercase; }
+      .main-navigation li a:hover {
+        background-color: #333333;
+        text-decoration: none; }
+  .main-navigation .menu-item-has-children a {
+    line-height: 3.5rem; }
+  @media all and (min-width: 480px) {
+    .main-navigation {
+      clear: both; }
+      .main-navigation li {
+        text-align: right; }
+      .main-navigation ul {
+        padding: 0;
+        margin: 0;
+        list-style: none;
+        display: block; }
+        .main-navigation ul ul {
+          display: none;
+          position: absolute; }
+      .main-navigation a {
+        border-bottom-width: 0; }
+      .main-navigation li {
+        float: right;
+        padding: 0;
+        margin: 0;
+        list-style: none;
         position: relative; }
-        .main-navigation li.menu-item-has-children:hover > ul {
+        .main-navigation li.current-menu-item > a, .main-navigation li:hover > a {
+          color: #fff;
+          background-color: #000; }
+          .main-navigation li.current-menu-item > a:after, .main-navigation li:hover > a:after {
+            border-color: #fff; }
+        .main-navigation li.current-menu-item.menu-item-has-children > a:after, .main-navigation li:hover.menu-item-has-children > a:after {
+          border-top-color: #fff; }
+        .main-navigation li.menu-item-has-children a {
+          padding-left: 2em;
+          padding-left: 2rem; }
+        .main-navigation li.menu-item-has-children > a:after {
+          content: "";
           display: block;
-          background-color: #000;
-          width: 250px; }
-          .main-navigation li.menu-item-has-children:hover > ul ul {
-            right: 100%;
-            top: 0; }
-          .main-navigation li.menu-item-has-children:hover > ul li {
-            float: none;
-            display: block; } }
+          position: absolute;
+          top: 50%;
+          left: 0.6em;
+          left: 0.6rem;
+          margin-top: -3px;
+          border: 5px solid transparent;
+          border-top-color: #a6a6a6;
+          height: 0;
+          width: 0;
+          margin-right: 10px; }
+        .main-navigation li .sub-menu .menu-item-has-children:hover > a:after {
+          border-right-color: #fff; }
+        .main-navigation li .sub-menu .menu-item-has-children > a:after {
+          content: "";
+          display: block;
+          position: absolute;
+          top: 50%;
+          left: 0.6em;
+          left: 0.6rem;
+          margin-top: -6px;
+          border: 5px solid transparent;
+          border-right-color: #a6a6a6;
+          height: 0;
+          width: 0;
+          margin-right: 10px; }
+        .main-navigation li.menu-item-has-children:hover {
+          position: relative; }
+          .main-navigation li.menu-item-has-children:hover > ul {
+            display: block;
+            background-color: #000;
+            width: 250px; }
+            .main-navigation li.menu-item-has-children:hover > ul ul {
+              right: 100%;
+              top: 0; }
+            .main-navigation li.menu-item-has-children:hover > ul li {
+              float: none;
+              display: block; } }
 
 /* Small menu */
 .menu-toggle {
